suppress Maven Jansi warnings with MAVEN_OPTS