@@ -1,5 +1,6 @@
 #!/usr/bin/env bash
 set -e
+export MAVEN_OPTS="--enable-native-access=ALL-UNNAMED"
 echo "Building..."
 mvn/bin/mvn package -q -DskipTests
 echo "Starting UI Checker..."
